# minecraft-server-installer

./: pyproject.toml
src/minecraft-server-installer/: main.py  msi_func.py  msi_guide.py
